--- a/Ebay/Extent-Report/ExtentReport.html
+++ b/Ebay/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-05-08 03:10:15</span>
+					<span class='suite-started-time'>2020-05-14 11:28:23</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 16s+106ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 29s+320ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 16s+106ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 29s+320ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-05-08 03:09:59</span> 
+							<span class='panel-lead suite-started-time'>2020-05-14 11:27:54</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-05-08 03:10:15</span> 
+							<span class='panel-lead suite-ended-time'>2020-05-14 11:28:23</span> 
 						</div> 
 					</div>
 				</div>
@@ -205,7 +205,12 @@
 									<tbody>
 											<tr>
 												<td>
-													TestRegisterPage
+													HomeLinkTest
+												</td>
+											</tr>
+											<tr>
+												<td>
+													TestSearchPage
 												</td>
 											</tr>
 									</tbody>
@@ -241,7 +246,8 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='TestRegisterPage'><a href='#!'>TestRegisterPage</a></li>
+											<li class='HomeLinkTest'><a href='#!'>HomeLinkTest</a></li>
+											<li class='TestSearchPage'><a href='#!'>TestSearchPage</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -273,22 +279,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='31cb4411-e884-4f7b-92a1-8a128afffefb'>
+										<li class='collection-item test displayed active pass ' extentid='a22e370f-8a88-4d44-8c63-37561a4356f7'>
 											<div class='test-head'>
-												<span class='test-name'>doRegister </span>
+												<span class='test-name'>Home </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  testregisterpage'></span>
+												<span class='category-assigned hide  homelinktest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-05-08 03:10:09</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-05-08 03:10:13</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 4s+71ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-05-14 11:28:04</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-05-14 11:28:04</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+124ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>TestRegisterPage</span>
+																<span class='category text-white'>HomeLinkTest</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -302,43 +308,48 @@
 														</thead>
 														<tbody>
 																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>03:10:09</td>
-																	<td class='step-details'>TestRegisterPage: do Register<br></td>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>11:28:04</td>
+																	<td class='step-details'>Test Passed</td>
 																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>03:10:10</td>
-																	<td class='step-details'>RegisterPage: Read N Validate<br></td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>03:10:10</td>
-																	<td class='step-details'>HomePage: click On Register<br></td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>03:10:10</td>
-																	<td class='step-details'>RegisterPage: get First Name Tab Web Element<br></td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>03:10:12</td>
-																	<td class='step-details'>RegisterPage: get Last Name Tab Web Element<br></td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>03:10:12</td>
-																	<td class='step-details'>RegisterPage: get Email Tab Web Element<br></td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>03:10:13</td>
-																	<td class='step-details'>RegisterPage: get Password Tab Web Element<br></td>
-																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='f875cd14-8968-4a3d-8445-c88f078f8307'>
+											<div class='test-head'>
+												<span class='test-name'>searchItems </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide  testsearchpage'></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-05-14 11:28:13</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-05-14 11:28:22</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 9s+34ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+														<div class='categories'>
+																<span class='category text-white'>TestSearchPage</span>
+														</div>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>03:10:13</td>
+																	<td class='timestamp'>11:28:22</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -397,7 +408,7 @@
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>TestRegisterPage</span>
+													<span class='category-name'>HomeLinkTest</span>
 												</div>
 												<div class='category-status-counts'>
 														<span class='pass label dot'>Pass: 1</span>
@@ -421,8 +432,43 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2020-05-08 03:10:09</td>
-																		<td><span class='category-link linked' extentid='31cb4411-e884-4f7b-92a1-8a128afffefb'>doRegister</span></td>
+																		<td>2020-05-14 11:28:04</td>
+																		<td><span class='category-link linked' extentid='a22e370f-8a88-4d44-8c63-37561a4356f7'>Home</span></td>
+																		<td><div class='status label capitalize pass'>pass</div></td>
+																	</tr>
+															<tbody>
+														</table>
+													</div>
+												</div> 
+											</li>
+											<li class='category-item displayed'>
+												<div class='cat-head'>
+													<span class='category-name'>TestSearchPage</span>
+												</div>
+												<div class='category-status-counts'>
+														<span class='pass label dot'>Pass: 1</span>
+												</div>
+												<div class='cat-body'>
+													<div class='category-status-counts'>
+														<div class='button-group'>
+															<a href='#!' class='pass label filter'>Pass <span class='icon'>1</span></a>
+															<a href='#!' class='fail label filter'>Fail <span class='icon'>0</span></a>
+															<a href='#!' class='other label filter'>Others <span class='icon'>0</span></a>
+														</div>
+													</div>
+													<div class='cat-tests'>
+														<table class='bordered'>
+															<thead>
+																<tr>
+																	<th>RunDate</th>
+																	<th>Test Name</th>
+																	<th>Status</th>
+																</tr>
+															</thead>
+															<tbody>
+																	<tr class='pass'>
+																		<td>2020-05-14 11:28:13</td>
+																		<td><span class='category-link linked' extentid='f875cd14-8968-4a3d-8445-c88f078f8307'>searchItems</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
